--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					</div>
 					
 					<span class="mobile">
-					<p style="margin-top: -4vh;padding: Calc( 2vh + 2vw );font-family: 'Lucida Sans Unicode'; text-align: center;  color: #000000; letter-spacing: -10%; font-size: Calc( 2.2vh + 2.2vw );"><br><b style="font-family: 'Verdana';color: red; font-size: Calc( 2.2vh + 2.2vw );">RAAS</b><br>	Raas são robôs desenvolvidos para serem executados no ambiente da Bulb, são uma opção para parceiros que não possuem ambiente de execução ou preferem optar por não executar os fluxos em máquinas internas.</p>
+					<p style="margin-top: -4vh;padding: Calc( 2vh + 2vw );font-family: 'Lucida Sans Unicode'; text-align: center;  color: #000000; letter-spacing: -10%; font-size: Calc( 2.0vh + 2.0vw );"><b style="font-family: 'Verdana';color: red; font-size: Calc( 2.2vh + 2.2vw );">RAAS</b><br>	Raas são robôs desenvolvidos para serem executados no ambiente da Bulb, são uma opção para parceiros que não possuem ambiente de execução ou preferem optar por não executar os fluxos em máquinas internas.</p>
 					</span>
 				</div>
 			</div>
@@ -218,7 +218,7 @@
 					</div>
 					
 					<span class="mobile">
-					<p style="margin-top: -1.5vh;padding: Calc( 1.8vh + 1.8vw );font-family: 'Lucida Sans Unicode'; text-align: center;  color: #000000; letter-spacing: -10%; font-size: Calc( 2.0vh + 2.0vw );"><br><b style="font-family: 'Verdana';color: red; font-size: Calc( 2.1vh + 2.1vw );">SUPORTE</b><br>	A Bulb é uma das únicas empresas do mercado que presta suporte para robôs de diversos tipos de ferramentas de RPA, caso você tenha um parque de robôs ja desenvolvido e precise apenas de manutenções e/ou acompanhamento contínuo, também pode contar com a Bulb!</p>
+					<p style="margin-top: -1.5vh;padding: Calc( 1.8vh + 1.8vw );font-family: 'Lucida Sans Unicode'; text-align: center;  color: #000000; letter-spacing: -10%; font-size: Calc( 1.8vh + 1.8vw );"><b style="font-family: 'Verdana';color: red; font-size: Calc( 2.1vh + 2.1vw );">SUPORTE</b><br>	A Bulb é uma das únicas empresas do mercado que presta suporte para robôs de diversos tipos de ferramentas de RPA, caso você tenha um parque de robôs ja desenvolvido e precise apenas de manutenções e/ou acompanhamento contínuo, também pode contar com a Bulb!</p>
 					</span>
 				</div>
 			</div>
@@ -292,7 +292,7 @@
 				</div>
 
                    	<div id="Separador_Dir">
-				<h1 style="font-family: 'Verdana'; margin-top: Calc( -3.0vh + -3.0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Transformação Digital</h1>
+				<h1 style="font-family: 'Verdana'; margin-top: Calc( 3.0vh + 3.0vw ); font-size: Calc( 3.0vh + 3.0vw ); color:red;">Transformação Digital</h1>
                <h2 style="font-family:'Lucida Sans Unicode'; text-align: justify; font-size: Calc( 2vh + 2vw );margin-top: 0.5vh; font-style: bold;"> Utilize uma tecnologia acessível a todos para iniciar o avanço tecnológico da sua organização.
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 <br><u>Descubra como podemos contribuir com o seu progresso:</u></h2>
