Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -131,13 +131,12 @@
 			Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
 
 		</div> -->
-		<div id="Conteudo_rodape">
-			<br>
-			<h2 class="rodape">Telefone: </h2><h3 class="rodape">(11)99999-9999</h3><br>
-			<h2 class="rodape">Email: </h2><h3 class="rodape">servicos@bulb.com</h3><br>
-			<h2 class="rodape">Endereço: </h2><h3 class="rodape">Rua dos Bulbos n° 543</h3><br>
-			
-		</div>
+	<div id="Conteudo_rodape" style="margin-top: Calc(-1vh + -1vw); height: Calc(10vh + 10vw); ">
+            <br>
+            <h2 class="rodape">Linkedin: </h2><h3 class="rodape">https://www.linkedin.com/company/bulbautomacoes</h3><br>
+            <h2 class="rodape">Email: </h2><h3 class="rodape">contato@bulbautomacoes.com.br</h3><br>
+
+        </div>
 	</body>
 </span>
 	<span class="mobile">
