--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<head>
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
 	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
+	  <title> Bulb Automações </title>
 	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
