--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -4,6 +4,7 @@
 	<head>
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
 	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
+		<title>Por que contratar</title>
 	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
