--- a/Index.html
+++ b/Index.html
@@ -4,8 +4,11 @@
 
 	<head>
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
-	  <meta name="keywords" content="palavra1, frase um, palavra2, frase dois">
+	  <meta charset="utf-8">
+	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
+	  <meta name="description" content="BULB - SOLUÇÃO PARA AUTOMAÇÃO DE PROCESSOS DE NEGÓCIO E TI - AUTOMAÇÕES DE PROCESSOS- RPA PARA TODOS - ROBÔ FINANCEIRO - SOLUÇÕES CONTABEIS - ECONOMIA POR ROI - TAREFAS REPETITIVAS - COMO AUTOMATIZAR - DESENVOLVEDORES DE ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRISM -  HELPSYSTEMS AUTOMATE - TECNOLOGIA DA INFORMAÇÃO - AUTOMATIZAÇÃO DE DEMANDAS">
 	  <title> Bulb Automações </title>
+	  
 	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
