Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -2,6 +2,7 @@
 	<link href="Css/Style.css" rel="stylesheet">
 	<link media="only screen and (max-device-width: 480px)" href="Css/Style - mobile.css" type="text/css" rel="stylesheet" />
 	<head>
+	  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
 	  <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
