--- a/Contatos.html
+++ b/Contatos.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="Pt-BR">
 	<link href="Css/Style.css" rel="stylesheet">
 	<link media="only screen and (max-device-width: 480px)" href="Css/Style - mobile.css" type="text/css" rel="stylesheet" />
 	<meta charset="utf-8">
