--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="Pt-BR">
 	<link href="Css/Style.css" rel="stylesheet">
 	<link media="only screen and (max-device-width: 480px)" href="Css/Style - mobile.css" type="text/css" rel="stylesheet" />
