--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -49,7 +49,7 @@
 <span class="mobile">
 	
             <div id="menuToggle">
-              <input type="checkbox">
+		<label><input type="checkbox"></label>
                 <span></span>
                 <span></span>
                 <span></span>
