--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -49,7 +49,7 @@
 <span class="mobile">
 	
             <div id="menuToggle">
-		<label><input type="checkbox"></label>
+		<input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
