--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 	  <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
 	  <meta name="description" content="BULB - SOLUÇÃO PARA AUTOMAÇÃO DE PROCESSOS DE NEGÓCIO E TI - AUTOMAÇÕES DE PROCESSOS- RPA PARA TODOS - ROBÔ FINANCEIRO - SOLUÇÕES CONTABEIS - ECONOMIA POR ROI - TAREFAS REPETITIVAS - COMO AUTOMATIZAR - DESENVOLVEDORES DE ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRISM -  HELPSYSTEMS AUTOMATE - TECNOLOGIA DA INFORMAÇÃO - AUTOMATIZAÇÃO DE DEMANDAS">
+	  <meta name="robots" content="index,follow">
 	  <title> Bulb Automações </title>
 	  
 	</head>
