Update Por que contratar 1.html

--- a/Por que contratar 1.html
+++ b/Por que contratar 1.html
@@ -7,8 +7,8 @@
 	   <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
 	  <meta name="description" content="BULB - SOLUÇÃO PARA AUTOMAÇÃO DE PROCESSOS DE NEGÓCIO E TI - AUTOMAÇÕES DE PROCESSOS- RPA PARA TODOS - ROBÔ FINANCEIRO - SOLUÇÕES CONTABEIS - ECONOMIA POR ROI - TAREFAS REPETITIVAS - COMO AUTOMATIZAR - DESENVOLVEDORES DE ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRISM -  HELPSYSTEMS AUTOMATE - TECNOLOGIA DA INFORMAÇÃO - AUTOMATIZAÇÃO DE DEMANDAS">
-	 
-		<title>Por que contratar</title>
+	  <meta name="robots" content="index,follow">
+	  <title>Por que contratar</title>
 	</head>
 	<div  id="header-wrap" class="fixed-header">
 		<!--<header>Teste</header>-->
