--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
 	  <meta name="description" content="BULB - SOLUÇÃO PARA AUTOMAÇÃO DE PROCESSOS DE NEGÓCIO E TI - AUTOMAÇÕES DE PROCESSOS- RPA PARA TODOS - ROBÔ FINANCEIRO - SOLUÇÕES CONTABEIS - ECONOMIA POR ROI - TAREFAS REPETITIVAS - COMO AUTOMATIZAR - DESENVOLVEDORES DE ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRISM -  HELPSYSTEMS AUTOMATE - TECNOLOGIA DA INFORMAÇÃO - AUTOMATIZAÇÃO DE DEMANDAS">
 	  <meta name="robots" content="index,follow">
-	  <title> Bulb Automação - Especialistas em Processos de rpa </title>
+	  <title> Bulb - Automação & Tecnologia </title>
 	  
 	</head>
 	<div  id="header-wrap" class="fixed-header">
