--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -6,7 +6,8 @@
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
 	  <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
-	  <meta name="description" content="BULB - SOLUÇÃO PARA AUTOMAÇÃO DE PROCESSOS DE NEGÓCIO E TI - AUTOMAÇÕES DE PROCESSOS- RPA PARA TODOS - ROBÔ FINANCEIRO - SOLUÇÕES CONTABEIS - ECONOMIA POR ROI - TAREFAS REPETITIVAS - COMO AUTOMATIZAR - DESENVOLVEDORES DE ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRISM -  HELPSYSTEMS AUTOMATE - TECNOLOGIA DA INFORMAÇÃO - AUTOMATIZAÇÃO DE DEMANDAS">
+	  <meta name="description" content="Bulb - Entregamos soluções de automatização de demandas de processos de negócios e TI. Com o RPA de uma forma acessível para todos, você pode aplicar robôs em departamentos como financeiro e contábil para otimizar tarefas repetitivas, adquirir economia por meio de ROI e entrar no universo da tecnologia da informação. 
+ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRISM -  HELPSYSTEMS AUTOMATE">
 	  <meta name="robots" content="index,follow">
 	  <title>Bulb - Quem Somos - Automation Anywhere - Open Rpa - Uipath</title>
 	</head>
