--- a/Por que contratar 1.html
+++ b/Por que contratar 1.html
@@ -138,7 +138,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div> -->
 		<div id="Conteudo_rodape">
 			<br>
-			<h2 class="rodape">Telefone: </h2><h3 class="rodape">(11)99999-9999</h3><br>
+			<h2 class="rodape">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br>
 			<h2 class="rodape">Email: </h2><h3 class="rodape">servicos@bulb.com</h3><br>
 			<h2 class="rodape">Endereço: </h2><h3 class="rodape">Rua dos Bulbos n° 543</h3><br>
 			
