Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -139,6 +139,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		</div> -->
 	<div id="Conteudo_rodape" style="margin-top: Calc(-1vh + -1vw); height: Calc(10vh + 10vw); ">
             <br>
+	    <h2 class="rodape">Telefone/WhatsApp: </h2><h3 class="rodape">(11) 95841-4882</h3><br>
             <h2 class="rodape">Linkedin: </h2><h3 class="rodape">https://www.linkedin.com/company/bulbautomacoes</h3><br>
             <h2 class="rodape">Email: </h2><h3 class="rodape">contato@bulbautomacoes.com.br</h3><br>
 
