--- a/Index.html
+++ b/Index.html
@@ -260,7 +260,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			
 			<div id="Separador_Dir" style="padding-right: 2%;">
 				
-				<h1 style="font-family: 'Verdana'; font-size: 2.2vw; color: Red">Transformação Digital</h1>
+				<h1 style="font-family: 'Verdana'; font-size: 2.2vw; color: Red; margin-top: 0.05%">Transformação Digital</h1>
                <h2 style="font-family:'Lucida Sans Unicode'; text-align: justify; font-size:1.5vw;"> Utilize uma tecnologia acessível a todos para iniciar o avanço tecnológico da sua organização.
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 Descubra como podemos contribuir com o seu progresso:</h2>
