--- a/Index.html
+++ b/Index.html
@@ -251,7 +251,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                    	</div>
 				</div>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw; margin-top: Calc(1vh + 1vw); "><div id="Conteudo_par_Vantagens_Icone"><img alt="Elimine os erros humanos dos seus processos" src="Imagens/Precisao.png"style="width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red; width: 30%;">PRECISÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw; margin-top: Calc(-1vh + -1vw); "><div id="Conteudo_par_Vantagens_Icone"><img alt="Elimine os erros humanos dos seus processos" src="Imagens/Precisao.png"style="width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red; width: 30%;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaso, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão</p>
                    	</div>
 				</div>
@@ -266,7 +266,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                 A automação começou no passado, faz parte do presente e é fundamental para o futuro!
                 Descubra como podemos contribuir com o seu progresso:</h2>
                 
-                	 <a class="botao" href="Contatos.html" ><b>CONTATE-NOS!!!</b></a> 
+                	 <a class="botao" href="Contatos.html" style="margin-top: Calc(1vh + 1vw)"><b>CONTATE-NOS!!!</b></a> 
 			</div>
 
 		</div>
