--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Separador_Esq" style="margin-left:-1.5%;">
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
 					<div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw; margin-top: Calc(-1vh + -1vw);margin-bottom: Calc(-2vh + -2vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Aumente a velocidade da entrega de suas tarefas" src="Imagens/Agilidade.png" style="margin-top:10%;width: 3vw;"></div><b style="font-size: 1.1vw;font-family: 'Verdana';color: red; ">AGILIDADE: </b>
-                   Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, contúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais</p></div>
+                   Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, contúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais<br><br></p></div>
 				</div>
 				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw;margin-top: Calc(-1vh + -1vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Adapte seu negocio de acordo com as demandas do mercado" src="Imagens/Dinamismo.png" style="margin-top:10%;width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">DINAMISMO: </b>
