--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -93,7 +93,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Separador_Esq" style="padding-left: 1%;">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
 			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
-			Em diveros ramos, existem inumeras tarefas massivas quem consomem muito tempo do operador
+			Em diveros ramos, existem inúmeras tarefas massivas quem consomem muito tempo do operador
 			sem agregar um real valor aos fins e a instituição, mas que não podem ser deixadas de lado.
 			A automação de processos resolve isso! Com o RPA, você pode focar esforços humanos
 			onde de fato um humano é necessário.</p>
@@ -103,7 +103,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
 			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black; text-align: justify;">
 			Atualmente em todos os lugares nos deparamos com milhares de dados espalhados e acumulados,
-			e inumeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
+			e inúmeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
 			a atuomação de processo também ajuda neste ponto, tendo em vista que para ocorrer uma automação,
 			primeiro é necessário ter um processo bem definido.</p>
 
@@ -167,7 +167,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</p>
 				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
 			<p style="font-size: Calc( 1.5vh + 1.5vw);font-family: 'Verdana'; color:black;text-align: justify;">
-			Em diveros ramos, existem inumeras tarefas massivas quem consomem muito tempo do operador
+			Em diveros ramos, existem inúmeras tarefas massivas quem consomem muito tempo do operador
 			sem agregar um real valor aos fins e a instituição, mas que não podem ser deixadas de lado.
 			A automação de processos resolve isso! Com o RPA, você pode focar esforços humanos
 			onde de fato um humano é necessário.</p>
@@ -176,7 +176,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
 			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black; text-align: justify;">
 			Atualmente em todos os lugares nos deparamos com milhares de dados espalhados e acumulados,
-			e inumeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
+			e inúmeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
 			a atuomação de processo também ajuda neste ponto, tendo em vista que para ocorrer uma automação,
 			primeiro é necessário ter um processo bem definido.</p>
 			
