Update Por que contratar 1.html

--- a/Por que contratar 1.html
+++ b/Por que contratar 1.html
@@ -116,7 +116,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
 			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
-			o resto você pode deixar com a Bulb, que em pouquissímo tempo de apresenta
+			o resto você pode deixar com a Bulb, que em pouquissímo tempo te apresenta
 			um projeto pronto para ser implantado.</p>
 				
 			</div>
@@ -185,7 +185,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black;text-align: justify;">
 			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
-			o resto você pode deixar com a Bulb, que em pouquissímo tempo de apresenta
+			o resto você pode deixar com a Bulb, que em pouquissímo tempo te apresenta
 			um projeto pronto para ser implantado.</p>
 				
 
