--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -76,7 +76,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 					<h1 style=" font-family: Garamond;font-size: Calc( 1.7vh + 1.7vw ); color: white;">Sobre nós...</h1>
 					<p style=" font-family: Garamond;font-size: Calc( 1.3vh + 1.3vw ); text-align: justify; color: whitesmoke;">
 					A Bulb é uma empresa do ramo de tecnologia focada em automação de processos digitais. Criada recentemente, tem propósitos claros e objetivos devido a grande experiência de seus co-fundadores no mercado.
-					O diferencial da empresa é a entrega de soluções de diversos tipos como: automações prontas, automações novas (conforme necessidade dos parceiros), robôs como serviço, entre outros.
+					O diferencial da empresa é a entrega de soluções de diversos tipos, como: automações prontas, automações novas (conforme necessidade dos parceiros), robôs como serviço, suporte, entre outros.
 					<b>A Bulb não foi criada por executivos, mas por desenvolvedores!</b></p>
 
 				</div>
@@ -199,7 +199,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 					<h1 style=" font-family: Garamond;font-size: Calc( 2vh + 2vw ); margin-top: Calc( 4vh + 3.1vw ); color: white;">Sobre nós...</h1>
 					<p style=" font-family: Garamond;font-size: Calc( 1.5vh + 1.5vw ); text-align: justify; color: whitesmoke;">
 					A Bulb é uma empresa do ramo de tecnologia focada em automação de processos digitais. Criada recentemente, tem propósitos claros e objetivos devido a grande experiência de seus co-fundadores no mercado.
-					O diferencial da empresa é a entrega de soluções de diversos tipos como: automações prontas, automações novas (conforme necessidade dos parceiros), robôs como serviço, entre outros.
+					O diferencial da empresa é a entrega de soluções de diversos tipos, como: automações prontas, automações novas (conforme necessidade dos parceiros), robôs como serviço, suporte, entre outros.
 					<b>A Bulb não foi criada por executivos, mas por desenvolvedores!</b></p>
 
 				</div>
