--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -134,7 +134,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 									<br>
 									O Open RPA é uma ferramenta de automação de processo pouco utilizada no mercado<br> mas com 
 									um potencial enorme de crescimento. A partir do custo zero para aquisição<br> e da fácil implementação
-									em diversos ambientes, é uma ótima opção para automações <br>com baixo orçamento para investimentos.
+									em diversos ambientes, é uma ótima opção para automações <br>com baixo orçamento para investimento.
 									</p>
 									
 								</div>
