--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,9 @@
 	<head>
 	 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	  <link rel="icon" type="image/png" href="Imagens/icon.ico">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 	  <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
 	  <meta name="description" content="Bulb - Entregamos soluções de automatização de demandas de processos de negócios e TI. Com o RPA de uma forma acessível para todos, você pode aplicar robôs em departamentos como financeiro e contábil para otimizar tarefas repetitivas, adquirir economia por meio de ROI e entrar no universo da tecnologia da informação. 
@@ -77,7 +80,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Logo_Index">
 				<img src="Imagens/Indexlogo.png" style="  margin-left: -5%; height: 37vh; width: 33.2vw;">
 			</div>
-			<h1 style="margin-top: -3.5vh; font-family: 'Mulish'; font-size: 2.2vw;">Automação & Tecnologia</h1>
+			<h1 style="margin-top: -3.5vh; font-family: 'Mulish', sans-serif; font-size: 2.2vw;">Automação & Tecnologia</h1>
 			<p class="index" style="font-family: 'Lucida Sans Unicode';margin-top: -0.5%;font-size: 1.2vw;"><b>Com a Bulb, qualquer pessoa ou organização pode fazer parte do universo das automações. Fazendo uso de diversas tecnologias de forma integrada, proporcionamos melhorias de real valor agregado no dia-a-dia de nossos parceiros. <u>O avanço do amanhã começa hoje!</u></b></p>
 			<div id="Separador_Esq">
 				
