--- a/index.html
+++ b/index.html
@@ -239,21 +239,21 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<div id="Conteudo_par" style="height: 92vh;">
 			
 			<div id="Separador_Esq" style="margin-left:-1.5%;">
-				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo" style="font-family: 'Mulish', sans-serif;">
+				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif;"> <p class="Titulo">
 					<div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw; margin-top: Calc(-1vh + -1vw);margin-bottom: Calc(-2vh + -2vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Aumente a velocidade da entrega de suas tarefas" src="Imagens/Agilidade.png" style="margin-top:10%;width: 3vw;"></div><b style="font-size: 1.1vw;font-family: 'Verdana';color: red; ">AGILIDADE: </b>
                    Os robôs são desenvolvidos baseados em cálculos de economia de tempo por unidade de processamento, contúdo, as demandas automatizadas tornam-se mais ágeis do que as manuais<br><br></p></div>
 				</div>
-				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
+				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif;"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw;margin-top: Calc(-1vh + -1vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="Adapte seu negocio de acordo com as demandas do mercado" src="Imagens/Dinamismo.png" style="margin-top:10%;width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red;">DINAMISMO: </b>
                    O dinamismo de uma automação passa pela capacidade do robô de realizar mais de uma tarefa em um fluxo cíclico, onde demandas em cadeia podem ser mapeadas para gerar uma saída a partir de várias entradas</p>
                    	</div>
 				</div>
-				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
+				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif;"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw;margin-top: Calc(-1vh + -1vw);"><div id="Conteudo_par_Vantagens_Icone"><img alt="reduza os erros humanos em tarefas complexas" src="Imagens/Massa.png" style="margin-top:10%;width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red; width: 30%;">PRODUÇÃO: </b>
                    Com o uso de fluxos automatizados, o expediente de trabalho não tem fim... Os robôs podem ser executados para processamento de demandas massivas, liberando os funcionários humanos para outras tarefas que agregam real valor intelectual</p>
                    	</div>
 				</div>
-				<div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
+				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif;"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw; margin-top: Calc(-1vh + -1vw); "><div id="Conteudo_par_Vantagens_Icone"><img alt="Elimine os erros humanos dos seus processos" src="Imagens/Precisao.png"style="width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red; width: 30%;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaso, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão</p>
                    	</div>
