--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                    Com o uso de fluxos automatizados, o expediente de trabalho não tem fim... Os robôs podem ser executados para processamento de demandas massivas, liberando os funcionários humanos para outras tarefas que agregam real valor intelectual</p>
                    	</div>
 				</div>
-				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif;"> <p class="Titulo">
+				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif; height:  Calc( 40vh + 40vw );"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw; margin-top: Calc(-1vh + -1vw); "><div id="Conteudo_par_Vantagens_Icone"><img alt="Elimine os erros humanos dos seus processos" src="Imagens/Precisao.png"style="width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red; width: 30%;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaso, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão</p>
                    	</div>
