--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                    Com o uso de fluxos automatizados, o expediente de trabalho não tem fim... Os robôs podem ser executados para processamento de demandas massivas, liberando os funcionários humanos para outras tarefas que agregam real valor intelectual</p>
                    	</div>
 				</div>
-				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif; height:  Calc( 35vh + 35vw );"> <p class="Titulo">
+				<div id="Conteudo_par_Titulo_Vantagens" style="font-family: 'Mulish', sans-serif;"> <p class="Titulo">
                    <div id="Conteudo_par_Vantagens_Titulo" style="font-size: 1vw; margin-top: Calc(-1vh + -1vw); "><div id="Conteudo_par_Vantagens_Icone"><img alt="Elimine os erros humanos dos seus processos" src="Imagens/Precisao.png"style="width: 3vw;"></div><b style="font-size: 100%;font-family: 'Verdana';color: red; width: 30%;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaso, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão</p>
                    	</div>
@@ -297,7 +297,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				</div>
 						<br><br>
                    <div id="Conteudo_par_Titulo_Vantagens"> <p class="Titulo">
-                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 68vh + 68vw );padding-right: 2vw; padding-left: 5vw;text-align: left; height:  61vh;"><div id="Conteudo_par_Vantagens_Icone"><img alt="Torne suas automações ou seus projetos mais precisos" src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
+                   <div id="Conteudo_par_Vantagens_Titulo" style="font-size: Calc( 2.3vh + 2.3vw );margin-top: Calc( 72vh + 72vw );padding-right: 2vw; padding-left: 5vw;text-align: left; height:  61vh;"><div id="Conteudo_par_Vantagens_Icone"><img alt="Torne suas automações ou seus projetos mais precisos" src="Imagens/Precisao.png"style="width: Calc( 10vh + 10vw);"></div><b style="font-size: Calc( 2.3vh + 2.3vw );font-family: 'Verdana';color: red;">PRECISÃO: </b>
                    Com um levantamento preciso das necessidades do fluxo, os robôs executam tarefas precisas durante toda a produção. Diferentemente de um humano, os robôs não sofrem com cansaço, estresse e outros fatores do tipo, podendo gerar do começo ao fim da execução, resultados no mesmo padrão.</p>
                    	</div>
 				</div>
