Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -35,7 +35,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<span class="desktop"><div  id="header-wrap" class="fixed-header_Menu">
 		<!--<header>Teste</header>-->
 			<div class="Headerinterno">
-				<ul class="list" style="font-family: 'Verdana';">
+				<ul class="list" style="font-family: 'Mulish', sans-serif;">
 				      <li><a href="Index.html"><b>Home</b></a></li>
 				      <li><a href="Por que contratar.html"><b>Sobre o RPA<b></a></li>
 				      <li><a href="Quem Somos.html"><b>Quem Somos?</b></a></li>
@@ -95,7 +95,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<div id="Conteudo_par" style="height: 46vh;">
 			<div id="Separador_Esq" style="padding-left: 1%;">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
-			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
+			<p style="font-size: 1.05vw;font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Em diveros ramos, existem inúmeras tarefas massivas quem consomem muito tempo do operador
 			sem agregar um real valor aos fins e a instituição, mas que não podem ser deixadas de lado.
 			A automação de processos resolve isso! Com o RPA, você pode focar esforços humanos
@@ -104,7 +104,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			<div id="Separador_Dir">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
-			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black; text-align: justify;">
+			<p style="font-size: 1.05vw;font-family: 'Mulish', sans-serif; color:black; text-align: justify;">
 			Atualmente em todos os lugares nos deparamos com milhares de dados espalhados e acumulados,
 			e inúmeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
 			a atuomação de processo também ajuda neste ponto, tendo em vista que para ocorrer uma automação,
@@ -117,7 +117,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<div id="Conteudo_par" style="height: 50%;">
 			<div id="Separador_Esq" style="padding-left: 1%;">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
-			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
+			<p style="font-size: 1.05vw;font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
 			o resto você pode deixar com a Bulb, que em pouquissímo tempo te apresenta
@@ -126,7 +126,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			<div id="Separador_Dir">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Um mundo tecnológico e automatizado não é futuro,<br> é presente!</h2>
-			<p style="font-size: 1.05vw;font-family: 'Verdana'; color:black;text-align: justify;">
+			<p style="font-size: 1.05vw;font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Pode parecer redundância, mas não é, se você não usufrui de demandas automatizadas em sua organização
 			até os dias atuais,	provavelmente você está ficando para trás. Automações estão presentes em todos os lugares,
 			e você sem muito esforço e investimento pode fazer parte deste universo com menos esforço e mais desempenho.</p>
@@ -163,13 +163,13 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 		<div id="Conteudo_par" style="height: Calc( 195vh + 195vw);margin-top: Calc( 13vh + 13vw); font-size:Calc( 1.5vh + 1.5vw);padding-right: Calc( 2vh + 2vw);padding-left: Calc( 1vh + 1vw); margin-bottom: 0">
 			<h2 style="font-family: 'Georgia'; color:  rgb(184, 134, 11); font-size:Calc( 2.5vh + 2.5vw); ">O que exatamente é a tecnologia RPA?</h2>
 
-			<p style="font-family: 'Verdana'; color: black; text-align: justify;"><b>
+			<p style="font-family: 'Mulish', sans-serif; color: black; text-align: justify;"><b>
 			A sigla RPA, significa Robotic Process Automation, e representa a ideia de automatizar processos de trabalho de forma 100% digital, utilizando ferramentas específicas desta tecnologia.
 			O RPA é algo que está sendo cada vez mais utilizado em pequenos, médios e grandes segmentos do mercado por ser uma forma fácil e versátil de substituir tarefas massivas e repetitivas em algo totalmente autônomo.
 			Demandas de diversos tipos podem ser automatizadas com RPA!</b>
 			</p>
 				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Utilize seu tempo em tarefas onde você é fundamental, o resto, deixa com seu amigo virtual...</h2>
-			<p style="font-size: Calc( 1.5vh + 1.5vw);font-family: 'Verdana'; color:black;text-align: justify;">
+			<p style="font-size: Calc( 1.5vh + 1.5vw);font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Em diveros ramos, existem inúmeras tarefas massivas quem consomem muito tempo do operador
 			sem agregar um real valor aos fins e a instituição, mas que não podem ser deixadas de lado.
 			A automação de processos resolve isso! Com o RPA, você pode focar esforços humanos
@@ -177,7 +177,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 
 
 				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Transforme massa de demandas em fluxos automatizados</h2>
-			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black; text-align: justify;">
+			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Mulish', sans-serif; color:black; text-align: justify;">
 			Atualmente em todos os lugares nos deparamos com milhares de dados espalhados e acumulados,
 			e inúmeras situações transformam quantidades grandes de dados em algo complexo e até mesmo desorganizado,
 			a atuomação de processo também ajuda neste ponto, tendo em vista que para ocorrer uma automação,
@@ -186,7 +186,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
                 <img src="Imagens/icon.png" style="width: Calc( 40vh + 40vw);margin-top: Calc( 2vh + 2vw);" >
 
 				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
-			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black;text-align: justify;">
+			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
 			o resto você pode deixar com a Bulb, que em pouquissímo tempo te apresenta
@@ -194,7 +194,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 				
 
 				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">Um mundo tecnológico e automatizado não é futuro, é presente!</h2>
-			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Verdana'; color:black;text-align: justify;">
+			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
 			Pode parecer redundância, mas não é, se você não usufrui de demandas automatizadas em sua organização
 			até os dias atuais,	provavelmente você está ficando para trás. Automações estão presentes em todos os lugares,
 			e você sem muito esforço e investimento pode fazer parte deste universo com menos esforço e mais desempenho.</p>
