--- a/Index.html
+++ b/Index.html
@@ -88,7 +88,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Mulish', sans-serif;font-weight:bold;"><b>QUEM SOMOS</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Mulish', sans-serif;font-weight:Black;"><b>QUEM SOMOS</b></a>
 			</div>
 			
 		</div>
