--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,6 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@1000&display=swap" rel="stylesheet">
 	  <meta charset="utf-8">
 	  <meta name="keywords" content="Bulb, Automação, Automatização, Rpa, Automate, Processos, automatização, Robotic, Process, Automation, Uipath, bluePrism, blue, prism, Open, openrpa, open-rpa, Anywhere, Roi">
 	  <meta name="description" content="Bulb - Entregamos soluções de automatização de demandas de processos de negócios e TI. Com o RPA de uma forma acessível para todos, você pode aplicar robôs em departamentos como financeiro e contábil para otimizar tarefas repetitivas, adquirir economia por meio de ROI e entrar no universo da tecnologia da informação. 
@@ -89,7 +88,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			</div>
 			
 			<div id="Separador_Dir">
-				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Mulish', sans-serif;font-weight:Bold;"><b>QUEM SOMOS</b></a>
+				<a class="botao_Quem_somos" href="Quem Somos.html" style="font-family: 'Mulish', sans-serif;"><b>QUEM SOMOS</b></a>
 			</div>
 			
 		</div>
