Update Por que contratar.html

--- a/Por que contratar.html
+++ b/Por que contratar.html
@@ -118,7 +118,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 			<div id="Separador_Esq" style="padding-left: 1%;">
 				<h2 style="font-size:1.6vw;font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
 			<p style="font-size: 1.05vw;font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
-			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
+			Para automatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
 			o resto você pode deixar com a Bulb, que em pouquissímo tempo te apresenta
 			um projeto pronto para ser implantado.</p>
@@ -187,7 +187,7 @@ ROBOTIC PROCCESS AUTOMATION - AUTOMATION ANYWHERE - OPEN RPA - UIPATH - BLUEPRIS
 
 				<h2 style="font-size:Calc( 1.8vh + 1.8vw); font-family: 'Lucida Sans Unicode'; color:hsl(276, 100%, 50%)">A Automação não é algo complexo, pelo contrário, é a facilidade que tanto precisamos</h2>
 			<p style="font-size: Calc( 1.5vh + 1.5vw); font-family: 'Mulish', sans-serif; color:black;text-align: justify;">
-			Para atuomatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
+			Para automatizar demandas, basta seguir um método pré definido e muito bem validado por um mercado
 			bem experiente. A partir do momento que a vontade de automatizar uma demanda surge,
 			o resto você pode deixar com a Bulb, que em pouquissímo tempo te apresenta
 			um projeto pronto para ser implantado.</p>
